--- a/index.html
+++ b/index.html
@@ -2,121 +2,104 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<script>
-  if (sessionStorage.getItem("loggedIn") !== "yes") {
-    window.location.href = "login.html";
-  }
-</script>
-
   <meta charset="UTF-8">
-  <title>تسجيل الدخول - حكيم جاليري</title>
+  <title>حكيم جاليري</title>
   <style>
     body {
-      background-color: #f1f1f1;
+      margin: 0;
       font-family: 'Cairo', sans-serif;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       height: 100vh;
-      margin: 0;
+      overflow: hidden;
     }
-
-    .branding {
-      font-size: 40px;
-      font-weight: bold;
-      color: #d4af37;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 2px #333;
-    }
-
-    .login-box {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      text-align: center;
-    }
-
-    .login-box h2 {
-      margin-bottom: 20px;
-      color: #444;
-    }
-
-    input[type="text"], input[type="password"] {
-      padding: 10px;
+    .sidebar {
       width: 250px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      text-align: center;
-    }
-
-    label {
-      font-size: 14px;
-      color: #555;
-    }
-
-    button {
-      padding: 10px 20px;
-      background-color: #d4af37;
-      border: none;
-      border-radius: 5px;
+      background: #2c3e50;
       color: white;
-      font-weight: bold;
-      cursor: pointer;
+      padding-top: 20px;
+      display: flex;
+      flex-direction: column;
+    }
+    .sidebar a {
+      padding: 15px 20px;
+      color: white;
+      text-decoration: none;
+      border-bottom: 1px solid #34495e;
+    }
+    .sidebar a:hover {
+      background-color: #1abc9c;
+    }
+    .content {
+      flex: 1;
+      padding: 0;
+      overflow-y: auto;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  
+    @media (max-width: 768px) {
+      .sidebar {
+        position: fixed;
+        left: -250px;
+        top: 0;
+        height: 100%;
+        transition: left 0.3s ease;
+        z-index: 999;
+      }
+      .sidebar.open {
+        left: 0;
+      }
+      .menu-toggle {
+        display: block;
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        background: #2c3e50;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        z-index: 1000;
+      }
+    }
+    .menu-toggle {
+      display: none;
     }
 
-    button:hover {
-      background-color: #b38e20;
-    }
-
-    .error {
-      color: red;
-      margin-top: 10px;
-    }
-  </style>
+</style>
 </head>
 <body>
+<button class="menu-toggle" onclick="toggleMenu()">☰ القائمة</button>
 
-<div class="branding">حكيم جاليري</div>
+<div class="sidebar">
+  <h2 style="text-align:center;">التصنيفات</h2>
+  <a href="#" onclick="loadPage('home.html')">الصفحة الرئيسية</a>
+<a href="#" onclick="loadPage('printing-gifts.html')">ركن الهدايا</a>
+<a href="#" onclick="loadPage('cards.html')">التابلوهات وكروت الصور</a>
+<a href="#" onclick="loadPage('napkins-trays.html')">مناديل وبصمات وصواني</a>
+<a href="#" onclick="loadPage('laser-materials.html')">تقطيع ليزر وحفر</a>
+<a href="#" onclick="loadPage('handmade-materials.html')">خامات هاند ميد</a>
+<a href="#" onclick="loadPage('misc-products.html')">منتجات منوعه اخرى</a>
 
-<div class="login-box">
-  <h2>تسجيل الدخول</h2>
-  <input type="text" id="code" placeholder="أدخل الكود"><br>
-  <input type="password" id="password" placeholder="أدخل كلمة السر"><br>
-  <label><input type="checkbox" id="remember"> تذكرني</label><br><br>
-  <button onclick="login()">دخول</button>
-  <div class="error" id="error-message"></div>
+</div>
+
+<div class="content">
+  <iframe id="pageFrame" src="home.html"></iframe>
 </div>
 
 <script>
-  const users = [
-    { code: "HG2025", password: "access123" },
-    { code: "VIP01", password: "secret001" },
-    { code: "ADMIN", password: "adminpass" }
-  ];
-
-  if (localStorage.getItem("authenticated") === "true") {
-    window.location.href = "home.html";
+  function loadPage(page) {
+    document.getElementById('pageFrame').src = page;
   }
 
-  function login() {
-    var code = document.getElementById("code").value.trim();
-    var password = document.getElementById("password").value.trim();
-    var remember = document.getElementById("remember").checked;
-
-    const user = users.find(u => u.code === code && u.password === password);
-
-    if (user) {
-      if (remember) {
-        localStorage.setItem("authenticated", "true");
-      }
-      window.location.href = "home.html";
-    } else {
-      document.getElementById("error-message").innerText = "الكود أو كلمة السر غير صحيحة.";
-    }
+  function toggleMenu() {
+    const sidebar = document.querySelector('.sidebar');
+    sidebar.classList.toggle('open');
   }
+
 </script>
 
 </body>
