--- a/misc-products.html
+++ b/misc-products.html
@@ -1,11 +1,10 @@
 
 <!DOCTYPE html>
-
-<html dir="rtl" lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8"/>
-<title>هدايا الحفر</title>
-<style>
+  <meta charset="UTF-8">
+  <title>منتجات منوعه اخرى</title>
+  <style>
     body {
       font-family: 'Cairo', sans-serif;
       background-color: #f9f9f9;
@@ -37,27 +36,24 @@
   </style>
 </head>
 <body>
-<h2 style="text-align:center;">منتجات الطباعة</h2>
-<div style="background-color:#fff3cd; border:1px solid #ffeeba; padding:15px; margin-bottom:20px; border-radius:8px;">
-<strong>طريقة إرسال الأوردر:</strong>
-<p>يتم إرسال تفاصيل الأوردر كاملة (المنتجات، الكمية، المقاسات، نوع الطباعة أو الحفر) على واتساب، وسيتم تأكيد المدة والسعر حسب التفاصيل.</p>
-</div>
+
+<h2 style="text-align:center;">منتجات منوعه اخرى</h2>
+
 <table id="product-table">
-
-<thead>
-<tr>
-<th>اسم المنتج</th>
-<th>السعر جمله</th>
-<th>مدة التنفيذ</th>
-<th>سعر فوري</th>
-<th>رابط الصورة</th>
-</tr>
-</thead>
-
-<tbody></tbody>
+  <thead>
+    <tr>
+      <th>اسم المنتج</th>
+      <th>السعر</th>
+      <th>أقل عدد للجملة</th>
+      <th>السعر المقترح للبيع</th>
+      <th>الصورة</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
 </table>
+
 <script>
-  const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS5SFEqYKsyaJx0OhgNo2yG7ZebejdFp9Eg1urBZeNcI6Jm6nhh-QltNVSXo03BXQw79RwYEN1_fK_H/pub?gid=2129983501&single=true&output=csv";
+  const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS5SFEqYKsyaJx0OhgNo2yG7ZebejdFp9Eg1urBZeNcI6Jm6nhh-QltNVSXo03BXQw79RwYEN1_fK_H/pub?gid=1105029208&single=true&output=csv";
 
   fetch(csvUrl)
     .then(response => response.text())
@@ -74,7 +70,7 @@
           <td>${row[1]}</td>
           <td>${row[2]}</td>
           <td>${row[3]}</td>
-          <td><span class="icon-link" onclick="if(row[4]) window.open(row[4], '_blank')">📷</span></td>
+          <td><span class="icon-link" onclick="window.open('${row[4]}', '_blank')">📷</span></td>
         `;
         tableBody.appendChild(tr);
       }
@@ -83,5 +79,6 @@
       document.querySelector("tbody").innerHTML = "<tr><td colspan='5'>فشل في تحميل البيانات.</td></tr>";
     });
 </script>
+
 </body>
 </html>
