--- a/cards.html
+++ b/cards.html
@@ -40,7 +40,8 @@
 <h2 style="text-align:center;">منتجات الطباعة</h2>
 <div style="background-color:#fff3cd; border:1px solid #ffeeba; padding:15px; margin-bottom:20px; border-radius:8px;">
 <strong>طريقة إرسال الأوردر:</strong>
-<p>يتم إرسال تفاصيل الأوردر كاملة (المنتجات، الكمية، المقاسات، نوع الطباعة أو الحفر) على واتساب، وسيتم تأكيد المدة والسعر حسب التفاصيل.</p>
+<p>يتم إرسال تفاصيل الاوردر كامله , النوع , المقاس , لو في تصميم اكتب المناسبه ( مثال : تابلوه 30*40 تصميم هديه لخطيبته ) </p>
+<p>سوف يتم إضافه جميع التصاميم المتاحه قريباً</p>
 </div>
 <table id="product-table">
 
