--- a/home.html
+++ b/home.html
@@ -46,18 +46,25 @@
 <img src="لوجو.png" alt="شعار حكيم جاليري" class="logo">
 <h1>حكيم جاليري – كتالوج المنتجات</h1>
 
-<p>الاسعار للجمله فقط للغرض التجاري وليس للغرض الشخصي.</p>
-<p>مدة تجهيز الاوردر حسب النوع: بعض المنتجات 3 ايام وبعض المنتجات 7 ايام.</p>
-<p>الأوردر المستعجل له حساب إضافي حسب التوفر.</p>
-<p>غير مسؤولين عن أي تلف أو مشكله تبع شركات الشحن.</p>
-<p>التوصيل بيبقا لاوردر بسيط، لكن لو شغلك كتير تعالا راجع عليه واستلمه من المكان بنفسك.</p>
-<p>ابعت تفاصيل الاوردر كاملة زي المقاس والنوع، وآي غلطة في المقاسات أو النوع على مسؤوليتك.</p>
-<p>لو هتحاسب فودافون كاش بتضيف 1% على إجمالي الاوردر.</p>
-<p>المكان مفتوح يومياً من 12 إلى 9 ما عدا يوم الجمعة.</p>
-<p>التصاميم الجديدة والغريبة ليها حساب مختلف لو أول مرة نعملها، وفي بعض التصاميم مش عندنا.</p>
-<p>شغل الجمله بإستمرار وبكمية، والكمية القليلة لا يحسب بسعر الجمله.</p>
-<p>لا يوجد حساب بالآجل، وبرجاء إستلام الاوردر في موعد أقصاه 2 يوم.</p>
-<p>لا يوجد تسليم اوردر قبل سداد مبلغ الاوردر بالكامل لأي ظرف.</p>
+  <div style="border: 1px solid #ccc; padding: 15px; border-radius: 10px; background-color: #f9f9f9; line-height: 1.8;">
+  <p>سياسة التسعير بالجملة عندنا مبنية على إننا بنجمع كذا أوردر مع بعض وبيتم تنفيذهم في نفس الوقت. ده بيساعدنا نوفر في استهلاك الخامات، وتوفير وقت ومجهود تشغيل الماكينات، وبالتالي نقدر نوصل لسعر مناسب للجملة.</p>
+  
+  <p>لكن لو اشتغلنا على أوردر واحد لوحده بنفس السعر، ده بيعمل هدر في الخامات والوقت والمجهود، ووقتها تكلفة التنفيذ بتبقى أعلى، وسعر الجملة في الحالة دي بيعمل خسارة علينا.</p>
+  
+  <p>علشان كده شرط الكمية في شغل الجملة هو أساس لتوفير السعر الأقل، ومن غيره مش هنقدر نوفر نفس التكلفة ولا نفس التسعير.</p>
+  
+  <p>ولو كنت مستعجل على الأوردر ومحتاجه يتنفذ بشكل فوري، وفرنالك اختيارات تانية بأسعار خاصة للشغل المستعجل، بحيث تضمن سرعة التنفيذ من غير ما تتأثر جودة الشغل.</p>
+  
+  <p>وبنأكد إننا على قد ما نقدر بنحاول نحافظ على أسعارنا زي ما هي، رغم الزيادات المستمرة في أسعار الخامات والتشغيل في السوق، علشان نفضل دايمًا نوفرلك أفضل جودة بأفضل سعر ممكن.</p>
+</div>
+<div style="border: 1px solid #ccc; padding: 15px; border-radius: 10px; background-color: #f9f9f9; line-height: 1.8;">
+  <p>لو هتحاسب فودافون كاش بتضيف 1% على إجمالي الاوردر.</p>
+  <p>المكان مفتوح يومياً من 12 إلى 9 ما عدا يوم الجمعة.</p>
+  <p>التصاميم الجديدة والغريبة ليها حساب مختلف لو أول مرة نعملها، وفي بعض التصاميم مش عندنا.</p>
+  <p>لا يوجد حساب بالآجل، وبرجاء إستلام الاوردر في موعد أقصاه 2 يوم.</p>
+  <p>لا يوجد تسليم اوردر قبل سداد مبلغ الاوردر بالكامل لأي ظرف.</p>
+</div>
+
 
 <a href="https://wa.me/201016176778" class="whatsapp-button" target="_blank">تواصل عبر واتساب</a>
 
