--- a/napkins-trays.html
+++ b/napkins-trays.html
@@ -3,7 +3,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>مناديل وبصمات وصواني</title>
+  <title>مناسبات الافراح وتجهيزات العرائس</title>
   <style>
     body {
       font-family: 'Cairo', sans-serif;
