--- a/laser-materials.html
+++ b/laser-materials.html
@@ -45,7 +45,7 @@
       <th>اسم المنتج</th>
       <th>السعر</th>
       <th>أقل عدد للجملة</th>
-      <th>السعر المقترح للبيع</th>
+      <th>مدة التنفيذ</th>
       <th>الصورة</th>
     </tr>
   </thead>
