--- a/index.html
+++ b/index.html
@@ -77,11 +77,8 @@
 <div class="sidebar">
   <h2 style="text-align:center;">التصنيفات</h2>
   <a href="#" onclick="loadPage('home.html')">الصفحة الرئيسية</a>
-<a href="#" onclick="loadPage('printing-gifts.html')">ركن الهدايا</a>
-<a href="#" onclick="loadPage('cards.html')">التابلوهات وكروت الصور</a>
-<a href="#" onclick="loadPage('napkins-trays.html')">مناديل وبصمات وصواني</a>
-<a href="#" onclick="loadPage('laser-materials.html')">تقطيع ليزر وحفر</a>
-<a href="#" onclick="loadPage('handmade-materials.html')">خامات هاند ميد</a>
+<a href="#" onclick="loadPage('cards.html')"> الهدايا والطباعه والتابلوهات وكروت الصور</a>
+<a href="#" onclick="loadPage('napkins-trays.html')">خامات هاند ميد وليزر وحفر</a>
 <a href="#" onclick="loadPage('misc-products.html')">منتجات منوعه اخرى</a>
 
 </div>
