--- a/cards.html
+++ b/cards.html
@@ -48,7 +48,7 @@
 <thead>
 <tr>
 <th>اسم المنتج</th>
-<th>السعر جمله</th>
+<th>السعر </th>
 <th>مدة التنفيذ</th>
 <th>سعر فوري</th>
 <th>رابط الصورة</th>
