--- a/misc-products.html
+++ b/misc-products.html
@@ -3,7 +3,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>منتجات منوعه اخرى</title>
+  <title>منتجات تجهيزات العرائس</title>
   <style>
     body {
       font-family: 'Cairo', sans-serif;
@@ -67,8 +67,7 @@
           <td>${row[0]}</td>
           <td>${row[1]}</td>
           <td>${row[2]}</td>
-          <td>${row[3]}</td>
-          <td><span class="icon-link" onclick="window.open('${row[4]}', '_blank')">📷</span></td>
+          <td><span class="icon-link" onclick="window.open('${row[3]}', '_blank')">📷</span></td>
         `;
         tableBody.appendChild(tr);
       }
