--- a/misc-products.html
+++ b/misc-products.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-<h2 style="text-align:center;">منتجات منوعه اخرى</h2>
+<h2 style="text-align:center;">منتجات تجهيزات العرائس</h2>
 
 <table id="product-table">
   <thead>
