--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
 <div class="sidebar">
   <h2 style="text-align:center;">التصنيفات</h2>
-  <a href="#" onclick="loadPage('home.html')">الصفحة الرئيسية</a>
+<a href="#" onclick="loadPage('home.html')">الصفحة الرئيسية</a>
+<a href="#" onclick="loadPage('misc-products.html')">منتجات تجهيزات العرائس</a>
 <a href="#" onclick="loadPage('cards.html')"> الهدايا والطباعه والتابلوهات وكروت الصور</a>
 <a href="#" onclick="loadPage('napkins-trays.html')">خامات هاند ميد وليزر وحفر</a>
-<a href="#" onclick="loadPage('misc-products.html')">منتجات منوعه اخرى</a>
 
 </div>
 
